# CH585_CLion_Tamplate

./: .cproject  .gitignore  .project  .template  CH585.cfg  CMakeLists.txt
.mrs/: CH585_CLion_Tamplate.mrs-workspace
APP/: app_main.c
